# RevHalt

./: .gitignore  AXIOM_DYNAMICS_PLAN.md  AxiomsCheck.lean  ChaitinOmega.lean  CheckPA.lean  CheckPartrec.lean  ConcreteUniversalMachine.lean  OmegaRevHalt.lean  ProfilesOmega.lean  README.md  README2.md  REadme.md  RevHalt.lean  RevHaltDelta.lean  RevHalt_Bridge.lean  RevHalt_Demo_A.lean  RevHalt_Demo_C.lean  RevHalt_Unified.lean  Scratch.lean  TODO.md  Template.md  ThreeAxisTheory.md  _tmp_axioms_dirSup.lean  _tmp_axioms_dirSupClosed_iff.lean  _tmp_axioms_scott.lean  _tmp_check_choose.lean  _tmp_check_elim.lean  _tmp_check_existschoose.lean  _tmp_check_existsunique.lean  all_files.txt  build_error.txt  build_log.txt  errors.txt  lake-manifest.json  lakefile.lean  omega_kolmogorov_emergence.md  revhalt_structure_and_omega.md  scratch.lean  scratch2.lean  scratch3.lean  (+15 more)
AddOn/: ChaitinOmega.lean  ConcreteUniversalMachine.lean  OmegaRevHalt.lean  Profiles.lean  ProfilesOmega.lean  README.md  RevHaltInstances.lean  wrapper.md
Complexity/: OmegaComplexity.lean  ProfilesComplexity.lean  RevComplexity.lean
On_the_side/: Profiles.lean  ProfilesOmega.lean  README.md
R_random/: README.md  analysis.R  main.R  utils.R
RevHalt/: Base.lean  Bridge.lean  Extensions.lean  Instances.lean  Kinetic.lean  Main.lean  Mod3Holonomy.lean  Oracle.lean  README2.md  Search.lean  Theory.lean  Trilemma.lean  Unified.lean  walkthrough.md
TODO/: EMvsAC.md
docs/: ASYMMETRY_BRIDGE.md  AUDIT_CONFORMITE_MOD3.md  EMvsAC.md  (+83 more)
lagguard/lagguard-cli/: Cargo.toml
lagguard/lagguard-cli/src/: main.rs
(+405 files in other folders)
