[package]
name = "lagguard-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
lagguard-core = { path = "../lagguard-core" }
lagguard-por = { path = "../lagguard-por" }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
